test/FAIL/dispcmd/memory_match/03_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="doesn't match the memory"
#-------

load boucle.o
disp mem 0x8000+0